--- a/index.html
+++ b/index.html
@@ -115,10 +115,20 @@
 </section>
 
 <style>
+html {
+  font-size: 16px; /* default desktop */
+}
+
+@media (max-width: 576px) {
+  html {
+    font-size: 12px; /* perkecil skala di HP */
+  }
+}
+
 .photo-container {
   display: inline-block;
-  width: 350px;
-  border-radius: 20px;
+  width: 22rem; /* 350px */
+  border-radius: 1.25rem;
   animation: moveBox 6s infinite alternate ease-in-out;
   position: relative;
   z-index: 10;
@@ -126,45 +136,48 @@
 .photo-container img {
   width: 100%;
   display: block;
-  border-radius: 20px;
-  border: 6px solid #fff;
+  border-radius: 1.25rem;
+  border: 0.375rem solid #fff;
   box-sizing: border-box;
 }
 
 @keyframes moveBox {
-  from { transform: translateX(-75px); }
-  to   { transform: translateX(0px); }
+  from { transform: translateX(-4.7rem); } /* 75px */
+  to   { transform: translateX(0); }
 }
 
 .stack-container {
   position: relative;
   width: 100%;
-  max-width: 500px;
-  height: 350px;
+  max-width: 31rem; /* 500px */
+  height: 22rem;    /* 350px */
 }
+
 .photo-box {
   position: absolute;
-  width: 300px;
-  border-radius: 20px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+  width: 19rem; /* 300px */
+  border-radius: 1.25rem;
+  box-shadow: 0 0.5rem 1.25rem rgba(0,0,0,0.2);
 }
 .photo-box img {
   width: 100%;
-  border-radius: 20px;
-  border: 6px solid #fff;
+  border-radius: 1.25rem;
+  border: 0.375rem solid #fff;
   display: block;
   box-sizing: border-box;
 }
+
 .box1 {
   top: 0;
   left: 0;
   z-index: 1;
 }
 .box2 {
-  top: 110px;
-  left: 200px;
+  top: 7rem;     /* 110px */
+  left: 12.5rem; /* 200px */
   z-index: 2;
 }
+
 </style>
 
 
