--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="row align-items-center" style="margin-top: 13vh;">
 
       <!-- Kolom Gambar -->
-      <div class="col-md-6 text-center mb-4 mb-md-0 order-1 order-md-1">
+      <div class="col-12 col-xl-6 text-center mb-4 order-1">
         <div class="stack-container mx-auto">
           <div class="photo-box box1">
             <img src="frontend/pura.jpg" alt="foto 1">
@@ -95,7 +95,7 @@
       </div>
 
       <!-- Kolom Teks -->
-      <div class="col-md-6 text-center text-md-start order-2 order-md-2">
+      <div class="col-12 col-xl-6 text-center text-xl-start order-2"">
         <h2 class="fw-bold mb-3" >Tentang Website Ini</h2>
         <p class="mb-3">
           Website ini dibuat untuk memenuhi tugas <strong>Kuliah Kerja Lapangan (KKL)</strong>. 
