--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="lead text-muted mt-3 mb-4">
                 Kuliah Kerja Lapangan yang dilakukan pada tanggal 9 September sampai dengan 12 September 2025 program studi informatika fakultas teknik dan informatika universitas PGRI semarang.
                 </p>
-                <a href="#about" class="btn btn-primary btn-lg">Dwonload Laporan</a>
+                <a href="https://docs.google.com/document/d/10f3RcLRkYiFL5ENwGa2gk89xs98qJUwl/edit?usp=sharing&ouid=100488177587427174801&rtpof=true&sd=true" class="btn btn-primary btn-lg">Dwonload Laporan</a>
                 </div>
 
             </div>
@@ -421,21 +421,30 @@ html {
       <!-- Kolom kiri (4 anggota) -->
       <div class="col-md-6">
         <div class="d-flex align-items-center mb-3">
-          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 1">
-          <span class="fw-medium" style="font-size: 2rem;">Anggota 1</span>
-        </div>
-        <div class="d-flex align-items-center mb-3">
-          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 2">
-          <span class="fw-medium" style="font-size: 2rem;">Anggota 2</span>
-        </div>
-        <div class="d-flex align-items-center mb-3">
-          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 3">
-          <span class="fw-medium" style="font-size: 2rem;">Anggota 3</span>
+          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 4">
+            <div>
+                <span class="d-block" style="font-size: 2rem;">Bagus Andriyan</span>
+                <span class="text-muted" style="font-size: 1.5rem;">(23670149)</span>
+            </div>
         </div>
         <div class="d-flex align-items-center mb-3">
           <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 4">
             <div>
-                <span class="fw-bold d-block" style="font-size: 2rem;">Rifqi Nur Abdillah</span>
+                <span class="d-block" style="font-size: 2rem;">Hafizh Zaldy ALghani</span>
+                <span class="text-muted" style="font-size: 1.5rem;">(23670140)</span>
+            </div>
+        </div>
+        <div class="d-flex align-items-center mb-3">
+          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 4">
+            <div>
+                <span class="d-block" style="font-size: 2rem;">Ahmad Najmudin Afifi</span>
+                <span class="text-muted" style="font-size: 1.5rem;">(23670078)</span>
+            </div>
+        </div>
+        <div class="d-flex align-items-center mb-3">
+          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 4">
+            <div>
+                <span class="d-block" style="font-size: 2rem;">Rifqi Nur Abdillah</span>
                 <span class="text-muted" style="font-size: 1.5rem;">(23670125)</span>
             </div>
         </div>
@@ -444,17 +453,34 @@ html {
       <!-- Kolom kanan (3 anggota) -->
       <div class="col-md-6">
         <div class="d-flex align-items-center mb-3">
-          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 5">
-          <span class="fw-medium" style="font-size: 2rem;">Rifqi Nur Abdillah</span>
+          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 4">
+            <div>
+                <span class="d-block" style="font-size: 2rem;">Rionaldo Catur</span>
+                <span class="text-muted" style="font-size: 1.5rem;">(23670136)</span>
+            </div>
         </div>
         <div class="d-flex align-items-center mb-3">
-          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 6">
-          <span class="fw-medium" style="font-size: 2rem;">Anggota 6</span>
+          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 4">
+            <div>
+                <span class="d-block" style="font-size: 2rem;">Irgi Franshilyo Sutrisno</span>
+                <span class="text-muted" style="font-size: 1.5rem;">(23670134)</span>
+            </div>
         </div>
         <div class="d-flex align-items-center mb-3">
-          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 7">
-          <span class="fw-medium" style="font-size: 2rem;">Anggota 7</span>
+          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 4">
+            <div>
+                <span class="d-block" style="font-size: 2rem;">Iwan Aurelio Esyifa</span>
+                <span class="text-muted" style="font-size: 1.5rem;">(23670131)</span>
+            </div>
         </div>
+        <div class="d-flex align-items-center mb-3">
+          <img src="frontend/pura.jpg" style="width: 8vh;" class="rounded-circle me-3" alt="Foto Anggota 4">
+            <div>
+                <span class="d-block" style="font-size: 2rem;">Muhammad Kamal Muzzaki</span>
+                <span class="text-muted" style="font-size: 1.5rem;">(23670127)</span>
+            </div>
+        </div>
+
       </div>
     </div>
   </div>
