--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p class="lead text-muted mt-3 mb-4">
                 Kuliah Kerja Lapangan yang dilakukan pada tanggal 9 September sampai dengan 12 September 2025 program studi informatika fakultas teknik dan informatika universitas PGRI semarang.
                 </p>
-                <a href="https://docs.google.com/document/d/10f3RcLRkYiFL5ENwGa2gk89xs98qJUwl/edit?usp=sharing&ouid=100488177587427174801&rtpof=true&sd=true" class="btn btn-primary btn-lg">Dwonload Laporan</a>
+                <a target="_blank" href="https://docs.google.com/document/d/10f3RcLRkYiFL5ENwGa2gk89xs98qJUwl/edit?usp=sharing&ouid=100488177587427174801&rtpof=true&sd=true" class="btn btn-primary btn-lg">Dwonload Laporan</a>
                 </div>
 
             </div>
@@ -191,7 +191,7 @@ html {
         
   <div class="container px-4 px-lg-5 mt-5">
   <div class="row gx-4 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
-
+<!-- krisna -->
     <div class="col mb-5">
       <div class="card h-100 rounded-4">
 
@@ -206,13 +206,13 @@ html {
         </div>
         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
           <p>
-            Balai Diklat Industri (BDI) Denpasar adalah pusat pelatihan dan sertifikasi di bawah Kementerian Perindustrian.
-            <a href="balaidiklat.html" target="_self">Lihat Selengkapnya</a>
+            Krisna Oleh-Oleh Bali adalah pusat oleh-oleh terbesar dan terlengkap di Bali, menawarkan produk khas dengan harga terjangkau.
+            <a href="krisna.html" target="_self">Lihat Selengkapnya</a>
           </p>
         </div>
       </div>
     </div>
-
+<!-- balai diklat -->
     <div class="col mb-5">
       <div class="card h-100 rounded-4">
 
@@ -233,7 +233,7 @@ html {
         </div>
       </div>
     </div>
-
+<!-- padang galak -->
     <div class="col mb-5">
       <div class="card h-100 rounded-4">
 
@@ -247,14 +247,13 @@ html {
           <h5 class="fw-bolder">Pantai Padang Galak</h5>
         </div>
         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-          <p>
-            Balai Diklat Industri (BDI) Denpasar adalah pusat pelatihan dan sertifikasi di bawah Kementerian Perindustrian.
-            <a href="balaidiklat.html" target="_self">Lihat Selengkapnya</a>
+          <p>Pantai Padang Galak adalah destinasi wisata pantai di Denpasar yang dikenal dengan ombaknya dan keindahan matahari terbit.
+            <a href="pantaipdglk.html" target="_self">Lihat Selengkapnya</a>
           </p>
         </div>
       </div>
     </div>
-
+<!-- Oleh2 dewata -->
     <div class="col mb-5">
       <div class="card h-100 rounded-4">
 
@@ -268,14 +267,13 @@ html {
           <h5 class="fw-bolder">Pusat Oleh-oleh Dewata</h5>
         </div>
         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-          <p>
-            Balai Diklat Industri (BDI) Denpasar adalah pusat pelatihan dan sertifikasi di bawah Kementerian Perindustrian.
-            <a href="balaidiklat.html" target="_self">Lihat Selengkapnya</a>
+          <p>Pusat Oleh-Oleh Dewata adalah tempat belanja oleh-oleh khas Bali yang menawarkan produk lokal dengan harga terjangkau
+            <a href="pstolehdewata.html" target="_self">Lihat Selengkapnya</a>
           </p>
         </div>
       </div>
     </div>
-
+<!-- pandawa -->
     <div class="col mb-5">
       <div class="card h-100 rounded-4">
 
@@ -290,13 +288,13 @@ html {
         </div>
         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
           <p>
-            Balai Diklat Industri (BDI) Denpasar adalah pusat pelatihan dan sertifikasi di bawah Kementerian Perindustrian.
-            <a href="balaidiklat.html" target="_self">Lihat Selengkapnya</a>
+            Pantai Pandawa adalah pantai indah di Kabupaten Badung, Bali, terkenal dengan pasir putih dan tebing batu kapur yang eksotis.
+            <a href="pandawa.html" target="_self">Lihat Selengkapnya</a>
           </p>
         </div>
       </div>
     </div>
-
+<!-- gwk -->
     <div class="col mb-5">
       <div class="card h-100 rounded-4">
 
@@ -311,8 +309,8 @@ html {
         </div>
         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
           <p>
-            Balai Diklat Industri (BDI) Denpasar adalah pusat pelatihan dan sertifikasi di bawah Kementerian Perindustrian.
-            <a href="balaidiklat.html" target="_self">Lihat Selengkapnya</a>
+            Garuda Wisnu Kencana (GWK) adalah taman budaya terkenal di Bali dengan patung Dewa Wisnu dan burung Garuda yang ikonik.
+            <a href="gwk.html" target="_self">Lihat Selengkapnya</a>
           </p>
         </div>
       </div>
