--- a/pstolehdewata.html
+++ b/pstolehdewata.html
@@ -40,23 +40,29 @@
     </div>
     </nav>
 
-    <!-- teks -->
-     <section class="balai container mx-auto pt-5">
-        <img src="frontend/home.jpg" alt="Gambar Krisna Bali" class="img-fluid d-block mx-auto mt-5">
-        <h3 style="margin-top: 3vh;">Profil dan Tujuan</h3>
-        <p>Balai Diklat Industri (BDI) Denpasar adalah lembaga pendidikan dan pelatihan industri yang berada di bawah naungan Kementerian Perindustrian. BDI Denpasar memfokuskan programnya pada sektor industri kreatif, seperti animasi, konten digital, kerajinan, dan barang seni. Tujuannya adalah untuk menghasilkan sumber daya manusia (SDM) yang kompeten, mandiri, dan siap untuk bersaing di dunia industri.</p>
-        
-        <h3>Program Pelatihan</h3>
-        <p>BDI Denpasar menawarkan program pelatihan yang unik dengan konsep "3-in-1", yang mencakup pelatihan, sertifikasi kompetensi, dan penempatan kerja. Program ini dirancang untuk memastikan bahwa para lulusan tidak hanya memiliki keterampilan, tetapi juga mendapatkan pengakuan resmi dan dibantu untuk terjun ke dunia kerja.</p>
-     
-        <h3>Manfaat</h3>
-        <p>Dengan mengikuti program di BDI Denpasar, peserta akan mendapatkan:
-Sertifikat Kompetensi: Bukti pengakuan resmi atas keterampilan yang relevan dengan standar industri.
-Keterampilan Praktis: Pengetahuan yang dapat langsung diterapkan di dunia kerja.
-Peluang Karir: Peningkatan kesempatan untuk mendapatkan pekerjaan atau mengembangkan wirausaha di sektor kreatif.</p>
-    </section>
+<!-- teks -->
+<section class="balai container mx-auto pt-5">
+    <img src="frontend/dewata.jpg" alt="Gambar Krisna Bali" class="img-fluid d-block mx-auto mt-5">
+   
+    <h3 style="margin-top: 3vh;">Tentang Pusat Oleh-Oleh Dewata</h3>
+    <p>Pusat Oleh-Oleh Dewata adalah salah satu tempat belanja oleh-oleh khas Bali yang populer di kalangan wisatawan. Terletak strategis di Denpasar, tempat ini menawarkan berbagai produk lokal dengan harga yang bersahabat dan suasana belanja yang nyaman.</p>
 
+    <h3>Produk Unggulan</h3>
+    <p>Di Pusat Oleh-Oleh Dewata, pengunjung dapat menemukan beragam produk menarik seperti:
+    <br>• Makanan khas Bali seperti pie susu, kacang disco, dan dodol bali.
+    <br>• Busana adat dan kaos khas Bali.
+    <br>• Kerajinan tangan, souvenir, hingga aromaterapi tradisional.</p>
+
+    <h3>Keunggulan Toko</h3>
+    <p>Pusat Oleh-Oleh Dewata menawarkan kelebihan yang membuatnya jadi pilihan utama:
+    <br><strong>Harga Terjangkau:</strong> Produk langsung dari produsen lokal.
+    <br><strong>Tempat Luas dan Bersih:</strong> Nyaman untuk keluarga maupun rombongan.
+    <br><strong>Akses Mudah:</strong> Dekat dari bandara dan pusat kota Denpasar.
+    </p>
+</section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
