--- a/krisna.html
+++ b/krisna.html
@@ -40,22 +40,22 @@
     </div>
     </nav>
 
-    <!-- teks -->
-     <section class="balai container mx-auto pt-5">
-        <img src="frontend/home.jpg" alt="Gambar Krisna Bali" class="img-fluid d-block mx-auto mt-5">
-        <h3 style="margin-top: 3vh;">Profil dan Tujuan</h3>
-        <p>Balai Diklat Industri (BDI) Denpasar adalah lembaga pendidikan dan pelatihan industri yang berada di bawah naungan Kementerian Perindustrian. BDI Denpasar memfokuskan programnya pada sektor industri kreatif, seperti animasi, konten digital, kerajinan, dan barang seni. Tujuannya adalah untuk menghasilkan sumber daya manusia (SDM) yang kompeten, mandiri, dan siap untuk bersaing di dunia industri.</p>
-        
-        <h3>Program Pelatihan</h3>
-        <p>BDI Denpasar menawarkan program pelatihan yang unik dengan konsep "3-in-1", yang mencakup pelatihan, sertifikasi kompetensi, dan penempatan kerja. Program ini dirancang untuk memastikan bahwa para lulusan tidak hanya memiliki keterampilan, tetapi juga mendapatkan pengakuan resmi dan dibantu untuk terjun ke dunia kerja.</p>
-     
-        <h3>Manfaat</h3>
-        <p>Dengan mengikuti program di BDI Denpasar, peserta akan mendapatkan:
-Sertifikat Kompetensi: Bukti pengakuan resmi atas keterampilan yang relevan dengan standar industri.
-Keterampilan Praktis: Pengetahuan yang dapat langsung diterapkan di dunia kerja.
-Peluang Karir: Peningkatan kesempatan untuk mendapatkan pekerjaan atau mengembangkan wirausaha di sektor kreatif.</p>
-    </section>
+<!-- teks -->
+<section class="balai container mx-auto pt-5">
+    <img src="frontend/krisna.jpg" alt="Gambar Krisna Bali" class="img-fluid d-block mx-auto mt-5">
+    <h3 style="margin-top: 3vh;">Tentang Krisna Oleh-Oleh Bali</h3>
+    <p>Krisna Oleh-Oleh Bali adalah pusat oleh-oleh terbesar dan terlengkap di Pulau Dewata yang telah menjadi ikon wisata belanja khas Bali. Berdiri sejak tahun 2007, Krisna hadir untuk memudahkan wisatawan dalam mendapatkan berbagai produk khas Bali dengan harga yang terjangkau dan kualitas terbaik.</p>
 
+    <h3>Produk Unggulan</h3>
+    <p>Krisna menawarkan berbagai macam produk, mulai dari pakaian khas Bali, makanan dan minuman tradisional, kerajinan tangan, hingga aksesoris unik. Semua produk dikurasi dengan kualitas tinggi dan menggambarkan kekayaan budaya Bali.</p>
+
+    <h3>Keunggulan Krisna</h3>
+    <p>Belanja di Krisna memberikan pengalaman yang nyaman dan menyenangkan:
+    <br><strong>Harga Terjangkau:</strong> Produk langsung dari produsen lokal tanpa perantara.
+    <br><strong>Tempat Nyaman:</strong> Toko luas, bersih, dan strategis dekat area wisata.
+    <br><strong>Layanan Ramah:</strong> Staff profesional dan pelayanan prima untuk semua pengunjung.
+    </p>
+</section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
