--- a/pantaipdglk.html
+++ b/pantaipdglk.html
@@ -40,23 +40,28 @@
     </div>
     </nav>
 
-    <!-- teks -->
-     <section class="balai container mx-auto pt-5">
-        <img src="frontend/home.jpg" alt="Gambar Krisna Bali" class="img-fluid d-block mx-auto mt-5">
-        <h3 style="margin-top: 3vh;">Profil dan Tujuan</h3>
-        <p>Balai Diklat Industri (BDI) Denpasar adalah lembaga pendidikan dan pelatihan industri yang berada di bawah naungan Kementerian Perindustrian. BDI Denpasar memfokuskan programnya pada sektor industri kreatif, seperti animasi, konten digital, kerajinan, dan barang seni. Tujuannya adalah untuk menghasilkan sumber daya manusia (SDM) yang kompeten, mandiri, dan siap untuk bersaing di dunia industri.</p>
-        
-        <h3>Program Pelatihan</h3>
-        <p>BDI Denpasar menawarkan program pelatihan yang unik dengan konsep "3-in-1", yang mencakup pelatihan, sertifikasi kompetensi, dan penempatan kerja. Program ini dirancang untuk memastikan bahwa para lulusan tidak hanya memiliki keterampilan, tetapi juga mendapatkan pengakuan resmi dan dibantu untuk terjun ke dunia kerja.</p>
-     
-        <h3>Manfaat</h3>
-        <p>Dengan mengikuti program di BDI Denpasar, peserta akan mendapatkan:
-Sertifikat Kompetensi: Bukti pengakuan resmi atas keterampilan yang relevan dengan standar industri.
-Keterampilan Praktis: Pengetahuan yang dapat langsung diterapkan di dunia kerja.
-Peluang Karir: Peningkatan kesempatan untuk mendapatkan pekerjaan atau mengembangkan wirausaha di sektor kreatif.</p>
-    </section>
+<!-- teks -->
+<section class="balai container mx-auto pt-5">
+    <img src="frontend/pantaipadanggalak.JPG" alt="Gambar Krisna Bali" class="img-fluid d-block mx-auto mt-5">
 
+    <h3 style="margin-top: 3vh;">Tentang Pantai Padang Galak</h3>
+    <p>Pantai Padang Galak adalah salah satu pantai indah yang terletak di wilayah Denpasar, Bali. Pantai ini terkenal dengan suasana yang tenang, angin sejuk, dan ombak yang cocok untuk berselancar. Selain itu, pantai ini juga menjadi lokasi favorit untuk menikmati matahari terbit.</p>
+
+    <h3>Aktivitas Favorit</h3>
+    <p>Di Pantai Padang Galak, pengunjung dapat menikmati berbagai aktivitas menarik seperti:
+    <br>• Jogging dan bersepeda di jalur tepi pantai.
+    <br>• Bermain layang-layang, terutama saat Festival Layang-Layang Bali berlangsung.
+    <br>• Bersantai sambil menikmati pemandangan laut yang luas dan udara segar.</p>
+
+    <h3>Keunggulan Pantai</h3>
+    <p>Pantai Padang Galak menawarkan pengalaman yang berbeda dari pantai-pantai lain di Bali:
+    <br><strong>Suasana Tenang:</strong> Tidak terlalu ramai, cocok untuk mencari ketenangan.
+    <br><strong>Festival Budaya:</strong> Lokasi rutin berbagai acara budaya dan keagamaan.
+    <br><strong>Akses Mudah:</strong> Dekat dengan pusat kota Denpasar dan tempat parkir luas.
+    </p>
+</section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
